name:                plotly
version:             0.0.1.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Anonymous
maintainer:          anonymous@alasconnect.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Layout
  build-depends:       base
                     , containers
                     , ghcjs-dom
                     , lens
                     , reflex
                     , reflex-dom
                     , text
                     , time
  ghc-options:         -Wall -j -O0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable plotly-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -j -O0
  build-depends:       base
                     , plotly
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/alasconnect/reflex-examples
